nginx/nginx-ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "staging2.xiaolumm.com"
    http:
      paths:
      - path: /static/
        backend:
          serviceName: static
          servicePort: 80
      - path: /console/
        backend:
          serviceName: static
          servicePort: 80
      - path: /mall/
        backend:
          serviceName: static
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  - host: "staging2.xiaolumeimei.com"
    http:
      paths:
      - path: /static/
        backend:
          serviceName: static
          servicePort: 80
      - path: /console/
        backend:
          serviceName: static
          servicePort: 80
      - path: /mall/
        backend:
          serviceName: static
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
